ontopia/src/test-data/xtm2/invalid/reifier-collision.xtm
<topicMap xmlns="http://www.topicmaps.org/xtm/" version="2.0" reifier="#reifier">
  <topic id="topic">
    <occurrence reifier="#reifier">  <!-- Occurrence has the same reifier as the tm -->
      <type>
        <topicRef href="#occtype"/>
      </type>
      <resourceData>Testing resource data.</resourceData>
    </occurrence>
  </topic>
</topicMap>
